<resources>
    <string name="app_name">st144_icon_changer</string>

    <string name="this_action_may_contain_advertising">This action can contain ads</string>
    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="notifications">Notifications</string>
    <string name="continue2">Continue</string>
    <string name="one_start_title">Oh, no!</string>
    <string name="four_start_title">We love you too!</string>
    <string name="zero_star_title">Do you like the app?</string>
    <string name="one_start">Please give us some feedback</string>
    <string name="four_start">Thanks for your feedback</string>
    <string name="zero_star">Let us know your experience</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="settings">Settings</string>
    <string name="content_dialog_camera">You should provide camera permission to be able to use all the functions of the application.</string>
    <string name="content_dialog_notification">We need push notification permission to be able to use the app\'s functions.</string>
    <string name="reques_storage">We need exclusive write permission to use the app\'s functions.</string>
    <string name="yes">Yes</string>
    <string name="tv_cancel">Cancel</string>
    <string name="unknown">Unknown</string>
    <string name="icon_changer_and_icon_editor">Icon Changer And Icon Editor</string>
    <string name="intro1">A wide range of icon sets for you to choose from</string>
    <string name="intro2">Multiple colorful wallpapers</string>
    <string name="intro3">Diverse and colorful themes</string>
    <string name="allow">Allow</string>
    <string name="request_permission_to_use_notifications_to_notify_you">the following permissions to use the app\'s functions</string>
    <string name="you_have_not_selected_anything_yet">You have not selected any item yet</string>
    <string name="icons">Icons</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="themes">Themes</string>
    <string name="search_app">Search app...</string>
    <string name="icons_changer">Icons Changer</string>
    <string name="category">Category</string>
    <string name="from_gallery">From Gallery</string>
    <string name="suggestion_for_you">Suggestion For You</string>
    <string name="change_icons">Change Icons</string>
    <string name="apply">Apply</string>
    <string name="edit_icons">Edit Icons</string>
    <string name="create_your_own_icon_in_the_gallery_below">Create your own icon in the gallery below</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="gallery">Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="favorites">Favorites</string>
    <string name="edit_photos">Edit Photos</string>
    <string name="save">Save</string>
    <string name="my_icons">My Icons</string>
    <string name="filter">Filter</string>
    <string name="successfully">Successfully</string>
    <string name="icon_has_been_changed_successfully">Icon has been changed successfully!</string>
    <string name="list_icon_has_been_changed_successfully">List icon has been changed successfully!</string>
    <string name="create_new">Create New</string>
    <string name="please_choose_an_app_to_change_icon">Please choose an app to change icon</string>
    <string name="customize">Customize</string>
    <string name="background">Background</string>
    <string name="turn_on_off_button_switch_to_set_wallpaper">Turn on/off button switch to set wallpaper</string>
    <string name="choose_application">Choose Application</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="set_lock_screen">Set Lock Screen</string>
    <string name="set_home_screen">Set Home Screen</string>
    <string name="set_lock_home_screen"><![CDATA[Set Lock & Home Screen]]></string>
    <string name="share">Share App</string>
    <string name="policy"><![CDATA[Privacy & Policy]]></string>
    <string name="no_result_found">No Result Found</string>
    <string name="you_have_not_selected_an_application_to_apply">You have not selected an application to apply</string>
    <string name="unsupported_device">Unsupported device</string>
    <string name="cant_open_app">Can\'t open app</string>
    <string name="app_name_cannot_be_blank">App name cannot be blank</string>
    <string name="rear_camera_not_supported">Rear camera not supported</string>
    <string name="no_front_flash_support">Flash only supports rear camera</string>
    <string name="front_camera_not_supported">Front camera not supported</string>
    <string name="phone_does_not_support_flash">Phone does not support flash</string>
    <string name="photo_capture_failed">Photo capture failed</string>
    <string name="please_wait_for_data_loading">Please wait for data loading</string>
    <string name="background_has_been_setup_successfully">Background has been setup successfully!</string>
    <string name="theme_has_been_setup_successfully">Theme has been setup successfully!</string>
    <string name="wallpaper_set_successfully">Wallpaper set successfully</string>
    <string name="you_have_no_choice_yet">You have no choice yet.</string>
    <string name="camera">Camera</string>

</resources>