<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_home">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imvBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="55dp"
            android:src="@drawable/imv_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/dk_smiling_cat"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/icons"
            android:textColor="@color/_2f2f2f"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@id/imvBack"
            app:layout_constraintTop_toTopOf="@id/imvBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="22dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/roboto_mediumitalic"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/please_choose_an_app_to_change_icon"
            android:textColor="@color/e09cd5"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_search"
            android:drawableEnd="@drawable/icon_search"
            android:fontFamily="@font/roboto_regular"
            android:paddingVertical="9dp"
            android:paddingStart="14dp"
            android:paddingEnd="10dp"
            android:text="@string/search_app"
            android:textColor="@color/aaaaaa"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvContent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvSearch"
            tools:itemCount="50"
            tools:listitem="@layout/item_home_app"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:orientation="horizontal"
            app:spanCount="2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>