<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/roboto_mediumitalic"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/please_choose_an_app_to_change_icon"
            android:textColor="@color/e09cd5"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_search"
            android:drawableEnd="@drawable/icon_search"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/search_app"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingVertical="9dp"
            android:paddingStart="14dp"
            android:paddingEnd="10dp"
            android:textColor="@color/_2f2f2f"
            android:textColorHint="@color/aaaaaa"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvContent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlAllApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSearch">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="50"
                android:minHeight="230dp"
                tools:listitem="@layout/item_home_app" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_no_item"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/imv_no_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:visibility="gone"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_no_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result_found"
                android:textColor="@color/_656565"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_mediumitalic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imv_no_item"
                android:layout_marginTop="12dp"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctlAllApp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/imv_icons_changer" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/icons_changer"
                android:textColor="@color/_2f2f2f"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvIconChanger"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll"
            app:spanCount="2"
            tools:itemCount="50"
            tools:listitem="@layout/item_home_icons_changer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>