<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCF7FD">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/permission"
            android:textColor="@color/_2f2f2f"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="154dp"
            android:layout_height="154dp"
            android:src="@drawable/imv_permission"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl2"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_card_per">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/storage"
                        android:textColor="@color/_2f2f2f"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/swiVibrate2"
                        android:layout_width="54dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_swith_false_per" />

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/rl3"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_card_per">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/camera"
                        android:textColor="@color/_2f2f2f"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/swiVibrate3"
                        android:layout_width="56dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_swith_false_per" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/rl4"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_card_per">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/notifications"
                        android:textColor="@color/_2f2f2f"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/swiVibrate4"
                        android:layout_width="56dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_swith_false_per" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/continue2"
            android:textColor="@color/color_app"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/sv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
